--- a/main.html
+++ b/main.html
@@ -119,7 +119,7 @@
 
             // 
             document.getElementById('Acceleration').textContent = acceleration.toFixed(3) + "m/s2";
-            document.getElementById('Rotation').textContent = rotation.alpha.toFixed(3) + "°/s";
+            document.getElementById('Rotation').textContent = rotation.toFixed(3) + "°/s";
             document.getElementById('Interval').textContent = interval.toFixed(3) + "ms";
         }
 
